<!-- CR 674472 add by rurong.zhang   -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_bg_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--调整Now key 子菜单的视图-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:paddingStart="16dp">

                <ImageView
                    android:id="@+id/img_function_title"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_apps_black_24px" />

                <TextView
                    style="@style/settings_text_title"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="70dp"
                    android:text="@string/now_key_function_header_function" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="277dp"
                android:background="@color/white"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="177dp"
                    android:layout_height="277dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/function_mini_bg" />

                <com.kuding.nowkey.views.EditMenuItemView_Mini
                    android:id="@+id/view_menu_item_edit"
                    style="@style/settings_text_title"
                    android:layout_width="172dp"
                    android:layout_height="172dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="50dp" />
            </FrameLayout>

            <!--数量的视图-->
            <RadioGroup
                android:id="@+id/rg_number"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@color/setting_item_bg_color"
                android:checkedButton="@+id/male1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingStart="18dp"
                android:paddingTop="6dp">

                <RadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/three" />

                <RadioButton
                    android:id="@+id/rb_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/four" />

                <RadioButton
                    android:id="@+id/rb_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/five" />

                <RadioButton
                    android:id="@+id/rb_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/eight" />
            </RadioGroup>


            <!--手势的视图-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/setting_item_bg_color"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="16dp"
                android:paddingStart="18dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <ImageView
                        android:layout_width="@dimen/setting_icon_width"
                        android:layout_height="@dimen/setting_icon_width"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_pan_tool_black_24px" />

                    <TextView
                        style="@style/settings_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="70dp"
                        android:text="@string/now_key_option_gesture_title"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/double_tap"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_double_tap"
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:clickable="true"
                        android:drawableRight="@drawable/spinner_background_material"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/action_none"
                        android:textDirection="locale" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/now_key_option_long_click_title"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_long_press"
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:clickable="true"
                        android:drawableRight="@drawable/spinner_background_material"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/action_none"
                        android:textDirection="locale" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/short_drag"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_little_drag"
                        style="@style/settings_text_content"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:clickable="true"
                        android:drawableRight="@drawable/spinner_background_material"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:text="@string/action_none"
                        android:textDirection="locale" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/layout_undo_main"
        layout="@layout/layout_undo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:paddingEnd="@dimen/setting_item_padding"
        android:paddingStart="@dimen/setting_item_padding"
        android:visibility="gone" />
</RelativeLayout>